--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -22491,7 +22491,7 @@ Test&lt;/b&gt;</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
   <property name="urgency_hint">False</property>
-  <property name="has_separator">True</property>
+  <property name="has_separator">False</property>
   <signal name="delete_event" handler="on_delete_event" last_modification_time="Tue, 09 May 2006 18:32:26 GMT"/>
 
   <child internal-child="vbox">
